--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.62.2",
     "react-native-feather1s": "^0.2.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.7",
