--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@react-navigation/stack": "^5.6.2",
     "@unform/core": "^2.1.3",
     "@unform/mobile": "^2.1.3",
+    "appcenter": "3.1.0",
+    "appcenter-analytics": "3.1.0",
+    "appcenter-crashes": "3.1.0",
     "axios": "^0.19.2",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
